--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,6 +78,49 @@
     border-radius: 10px;   
 }
 
+select{
+
+    width: 30%;
+    height: 50px;
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+/* CSS */
+.button-31 {
+    background-color: #222;
+    border-radius: 4px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Farfetch Basis","Helvetica Neue",Arial,sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.5;
+    margin: 0;
+    max-width: none;
+    min-height: 44px;
+    min-width: 10px;
+    outline: none;
+    overflow: hidden;
+    padding: 9px 20px 8px;
+    position: relative;
+    text-align: center;
+    text-transform: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 15%;
+}
+
+.button-31:hover,
+.button-31:focus {
+    opacity: .75;
+}
+
 @media screen and (max-width: 800px) {
     .header-image{
         width: 10%;
