--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,6 +121,10 @@ select{
     opacity: .75;
 }
 
+#header {
+    background-color: white;
+}
+
 @media screen and (max-width: 800px) {
     .header-image{
         width: 10%;
