--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,7 @@
     font-size: 17px;
     background-color: black;
     color: white;
-    width: 8%;
+    width: 100px;
     padding: 5px 0;
 }
 
@@ -127,7 +127,11 @@ select{
 
 @media screen and (max-width: 800px) {
     .header-image{
-        width: 10%;
+        width: 7%;
+    }
+
+    .back-button{
+        width: 50px;
     }
 
     .word{
